Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11870

Message "MariaDB Galera and flashback does not support" should be "do not support"

    XMLWordPrintable

Details

    Description

      The message used to be

      MariaDB Galera does not support binlog format: MIXED
      

      which was okay, but now it's

      2017-01-22 17:31:48 140375704613632 [ERROR] WSREP: MariaDB Galera and flashback does not support binlog format: STATEMENT
      2017-01-22 17:31:48 140375704613632 [ERROR] WSREP: MariaDB Galera and flashback does not support binlog format: MIXED
      

      Additionally, messages in test results should be amended, and also some suppressions still have the old "MariaDB Galera does not support binlog format" and don't work anymore.

      Attachments

        Activity

          People

            elenst Elena Stepanova
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.