MDEV-11870 Message "MariaDB Galera and flashback does not support"

Fixed the typo, updated result file and suppression in the test
file which did not work anyway